--- a/frontend/src/components/navbar/navbar.scss
+++ b/frontend/src/components/navbar/navbar.scss
@@ -1,59 +1,63 @@
-.navbar{
+:root {
+    --dark-green: #1b4332; // Define your dark green color variable
+}
+
+.navbar {
     height: 50px;
     display: flex;
     align-items: center;
     font-size: 14px;
-    color: #333;
+    color: var(--dark-green); // Use the dark green color for text
     background-color: whitesmoke;
     border-bottom: 1px solid lightgray;
 
-    .navbarContainer{
+    .navbarContainer {
         display: flex;
         width: 100%;
         align-items: center;
         justify-content: space-between;
         padding: 20px;
 
-        .search{
+        .search {
             display: flex;
             width: 30%;
             align-items: center;
             padding: 3px;
             border: 0.5px solid lightgray;
 
-            input{
+            input {
                 width: 100%;
                 border: none;
                 outline: none;
-                background: transparent ;
+                background: transparent;
+                color: var(--dark-green); // Change input text color to dark green
 
-                &::placeholder{
+                &::placeholder {
                     font-size: 12px;
                     padding-left: 5px;
+                    color: var(--dark-green); // Change placeholder color to dark green
                 }
             }
         }
 
-        .items{
+        .items {
             display: flex;
             align-items: center;
             margin-left: 20px;
 
-            .item{
+            .item {
                 position: relative;
                 display: flex;
                 align-items: center;
                 margin-right: 20px;
 
-                .icon{
+                .icon {
                     font-size: 25px;
                     cursor: pointer;
+                    color: var(--dark-green); // Change icon color to dark green
                 }
-                // span{
-                //     padding-left: 5px;
-                // }
 
-                .counter{
+                .counter {
                     position: absolute;
                     width: 15px;
                     height: 15px;
@@ -68,14 +72,19 @@
                     top: -5px;
                     right: -5px;
                 }
+            }
 
-                .profileImg{
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 50%;
-                    object-fit: cover;
-                    border: 1px solid red;
-                    cursor: pointer;
+            .profileImg {
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                overflow: hidden; // Ensure the image fits inside the circle
+                cursor: pointer;
+
+                img {
+                    width: 100%; // Make sure the image fills the container
+                    height: 100%; // Ensure the image fills the height of the container
+                    object-fit: cover; // This keeps the image aspect ratio
                 }
             }
         }
