fixed css of some pages

--- a/frontend/src/components/Weather/Weather.scss
+++ b/frontend/src/components/Weather/Weather.scss
@@ -4,7 +4,7 @@
     // margin:40px;
     justify-content: center;
     // height: 110vh;
-    background: linear-gradient(135deg, #e3fcef, #c6f6d5);
+    // background: linear-gradient(135deg, #e3fcef, #c6f6d5);
     font-family: 'Roboto', sans-serif;
 
     .weather-dashboard {
