--- a/frontend/src/components/cropComponent/CropComponent.scss
+++ b/frontend/src/components/cropComponent/CropComponent.scss
@@ -20,7 +20,7 @@
     color: #388e3c; /* Dark green for labels */
   }
 
-  input {
+  input, select {
     padding: 5px;
     border: 1px solid #66bb6a; /* Light green border for inputs */
     border-radius: 4px;
