--- a/frontend/src/components/blogListExpert/BlogListExpert.scss
+++ b/frontend/src/components/blogListExpert/BlogListExpert.scss
@@ -3,7 +3,8 @@
     color: #333;
     padding: 40px;
     border-radius: 8px;
-    max-width: 1200px;
+    // max-width: 1200px;
+    max-width: 900px;
     margin: 40px auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.4s ease, box-shadow 0.3s ease-in-out;
