--- a/frontend/src/pages/Authentication/Authentication.scss
+++ b/frontend/src/pages/Authentication/Authentication.scss
@@ -22,7 +22,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
+  // height: 100vh;
 }
 
 .container {
