--- a/frontend/src/pages/Authentication/Authentication.scss
+++ b/frontend/src/pages/Authentication/Authentication.scss
@@ -26,6 +26,7 @@ body {
 }
 
 .container {
+  margin-top: 5rem;
   background-color: #fff;
   border-radius: 30px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
